--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-redux-loading-bar": "^5.0.8",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
