Add E2E Testing and CI

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "npx eslint ./src --fix",
     "preview": "vite preview",
-    "test": "vitest"
+    "e2e": "cypress run",
+    "test": "vitest",
+    "ci:test": "vitest --no-watch && start-server-and-test dev http-get://localhost:5173 e2e"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
@@ -31,6 +33,7 @@
     "cypress": "^13.7.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
