--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
         "browser": true,
         "es2021": true,
         "node": true,
-        "cypress/global":true
+        "cypress/globals":true
     },
     "extends": [
         "plugin:react/recommended",
